apps/base/media/sym-prowlarr/sym-prowlarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sym-prowlarr-ingressroute
  namespace: media
  annotations:
    gethomepage.dev/href: "https://sym-prowlarr.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Sym Prowlarr"
    gethomepage.dev/description: "Indexer manager for symlink stack"
    gethomepage.dev/app: sym-prowlarr
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/prowlarr.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`sym-prowlarr.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: sym-prowlarr
          port: 9696
  tls: {}
